--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="logo-container">
             <img src="odin-lined.png" alt="odin-logo" width="100px" height="120px">ODIN
         </div>
-        <div>Photo by Haile West on Unsplash</div>
+        <div>Photo by <a href="">Haile West</a> on <a href="">Unsplash</a></div>
     </div>
     <div class="body-right">
         <div class="service-description-container">
@@ -28,13 +28,45 @@
             <p>You <em>know</em> you want to.</p>
         </div>
         <div class="inputs">
-            <p>Let's do this!</p>
-            <br>
-            form
+            <form>
+                <p>Let's do this!</p>
+                <fieldset class="name">
+                    <div>
+                        <label for="first-name">First name</label>
+                        <input type="text" id="first-name" name="first-name" required>
+                    </div>
+                    <div>
+                        <label for="last-name">Last name</label>
+                        <input type="text" id="last-name" name="last-name" required>
+                    </div>
+                </fieldset>
+                <fieldset class="contact-info">
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div>
+                        <label for="phone-number">Phone number</label>
+                        <input type="text" id="phone-number" name="phone-number">
+                    </div>
+                </fieldset>
+                <fieldset class="password">
+                    <div>
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div>
+                        <label for="password-confirm">Confirm password</label>
+                        <input type="password" id="password-confirm" name="password-confirm" required>
+                    </div>
+                </fieldset>
         </div>
-        <div class="confirm-btns">button</div>
+        <div class="confirm-btns">
+            <button type="submit">Create Account</button>
+            </form>
+            <p>Already have an account? <span>Log in</span></p>
+        </div>
     </div>
 </body>
 
 </html>
-
